# vulnera-deps

./: Cargo.toml  README.md
benches/: bench_resolution.rs
src/: config.rs  lib.rs  module.rs  types.rs  use_cases.rs
src/application/: analysis_context.rs  errors.rs  events.rs  mod.rs
src/domain/: dependency_graph.rs  errors.rs  mod.rs  source_location.rs  version_constraint.rs
src/domain/vulnerability/: entities.rs  errors.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/infrastructure/: mod.rs
src/infrastructure/export/: mod.rs
src/infrastructure/parsers/: go.rs  java.rs  mod.rs  npm.rs  nuget.rs  php.rs  python.rs  python_uv.rs  ruby.rs  rust.rs  traits.rs  version_extractor.rs
src/infrastructure/registries/: mod.rs
src/parsers/: go.rs  java.rs  mod.rs  npm.rs  nuget.rs  php.rs  python.rs  python_uv.rs  ruby.rs  rust.rs  traits.rs
src/services/: cache.rs  contamination.rs  dependency_resolver.rs  graph.rs  mod.rs  popular_packages.rs  remediation.rs  repository_analysis.rs  resolution_algorithms.rs  version_resolution.rs
src/services/resolution/: mod.rs  recursive_resolver.rs
tests/: proptest_version_constraints.rs  test_analyze_dependencies_use_case.rs  test_dependency_resolution.rs  test_repository_analysis.rs  test_version_resolution.rs  test_version_resolution_service.rs
tests/common/: fixtures.rs  helpers.rs  mock_registry.rs  mod.rs
