[package]
name = "vulnera-deps"
version = "0.5.1"
edition = "2024"
rust-version = "1.92"
authors = ["Vulnera-Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Vulnera-rs/vulnera"
keywords = ["security", "vulnerability", "analysis", "dependencies"]
categories = ["web-programming", "development-tools"]

[dependencies]
vulnera-contract = { package = "vulnera-core", git = "https://github.com/Vulnera-rs/vulnera.git" }
vulnera-infrastructure = { package = "vulnera-core", git = "https://github.com/Vulnera-rs/vulnera.git" }
# Async runtime
tokio = { version = "1.51", features = ["full"] }
async-trait = "0.1.89"
# Logging
tracing = "0.1.44"
# Error handling
thiserror = "2.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# UUID generation
uuid = { version = "1.20.0", features = ["v4", "serde"] }
# Time handling
chrono = { version = "0.4.43", features = ["serde"] }
# Version parsing
semver = { version = "1.0", features = ["serde"] }
toml = "0.9.8"
serde_yml = "0.0.12"
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12"
once_cell = "1.21"
base64 = "0.22"
percent-encoding = "2.3"
petgraph = "0.8.3"
globset = "0.4"
[dev-dependencies]
tokio-test = "0.4.5"
proptest = "1.9"
criterion = { version = "0.8.1", features = ["html_reports", "async_tokio"] }
rstest = "0.26.1"
tempfile = "3.25.0"
futures = "0.3.31"
