[package]
name = "vulnera-deps"
version = "0.5.1"
edition = "2024"
rust-version = "1.92"
authors = ["Vulnera-Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Vulnera-rs/vulnera-deps"
keywords = ["security", "vulnerability", "analysis", "dependencies"]
categories = ["web-programming", "development-tools"]

[dependencies]
vulnera-contract = { path = "../vulnera-contract" }
vulnera-infrastructure = { path = "../vulnera-infrastructure" }
# Async runtime
tokio = { version = "1.51", features = ["rt", "sync", "fs", "macros"] }
async-trait = "0.1.89"
# Logging
tracing = "0.1.44"
# Error handling
thiserror = "2.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# UUID generation
uuid = { version = "1.20.0", features = ["v4", "serde"] }
# Time handling
chrono = { version = "0.4.43", features = ["serde"] }
# Version parsing
semver = { version = "1.0", features = ["serde"] }
toml = "1.1"
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12"
globset = "0.4"
pep508_rs = "0.9"
tree-sitter = "0.26"
tree-sitter-kotlin-sqry = "11"
tree-sitter-groovy-sqry = "11"
# Advisor
vulnera-advisor = "0.1.7"
petgraph = "0.8.3"
[dev-dependencies]
tokio-test = "0.4.5"
proptest = "1.9"
rstest = "0.26.1"
tempfile = "3.25.0"
